lcb: Fixed asm functions