@@ -1,10 +1,14 @@
 package vadl.lcb.template.lib.Target.MCTargetDesc;
 
+import static vadl.viam.ViamError.ensurePresent;
+
 import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Stream;
 import vadl.configuration.LcbConfiguration;
+import vadl.error.Diagnostic;
 import vadl.gcb.passes.relocation.model.ImplementedUserSpecifiedRelocation;
 import vadl.lcb.passes.relocation.GenerateLinkerComponentsPass;
 import vadl.lcb.template.CommonVarNames;
@@ -70,14 +74,30 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
     return List.of();
   }
 
-  private List<Map<String, String>> modifierMappings(Specification specification) {
+  private List<Map<String, String>> modifierMappings(
+      Specification specification,
+      GenerateLinkerComponentsPass.Output linkerInformation) {
     var mappings =
-        specification.assemblyDescription().map(AssemblyDescription::modifiers).orElse(List.of());
+        specification.assemblyDescription()
+            .map(AssemblyDescription::modifiers)
+            .orElse(Collections.emptyList());
+
     return mappings.stream().map(
-        mapping -> Map.of(
-            "modifier", mapping.simpleName(),
-            "relocation", mapping.getRelocation().identifier.lower()
-        )
+        mapping -> {
+          var elfRelocation =
+              ensurePresent(
+                  linkerInformation.elfRelocations().stream()
+                      .filter(x -> x.relocation().equals(mapping.getRelocation()))
+                      .findFirst(), () -> Diagnostic.error(
+                      "Cannot find an ELF relocation for the given relocation function.",
+                      mapping.getRelocation().sourceLocation()));
+
+          var variantKind = elfRelocation.variantKind();
+          return Map.of(
+              "modifier", mapping.simpleName(),
+              "variantKind", variantKind.value()
+          );
+        }
     ).toList();
   }
 
@@ -94,6 +114,8 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
                                                 Specification specification) {
     var abi =
         (Abi) specification.definitions().filter(x -> x instanceof Abi).findFirst().get();
+    var linkerInformation = (GenerateLinkerComponentsPass.Output) passResults.lastResultOf(
+        GenerateLinkerComponentsPass.class);
     var modifiers = formatModifier(passResults);
 
     return Map.of(CommonVarNames.NAMESPACE,
@@ -106,7 +128,7 @@ public class EmitAsmUtilsCppFilePass extends LcbTemplateRenderingPass {
             .toList(),
         "asmCompareFunction", stringCompareFunction(specification),
         "instructionNames", instructionsNames(specification),
-        "modifierMappings", modifierMappings(specification),
+        "modifierMappings", modifierMappings(specification, linkerInformation),
         "formatModifiers", modifiers
     );
   }
